--- a/static/maintenance/index.html
+++ b/static/maintenance/index.html
@@ -1,1 +1,11 @@
-whoop there it is
+<html>
+<head>
+<title>muxlist</title>
+</head>
+<body>
+<center>
+<h1>muxlist will be back later</h1>
+<img src="astronaut.jpg">
+</center>
+</body>
+</html>
